# kenwood

./: .gitignore  Cargo.toml  README.md  ci-local.sh  deny.toml  lint.sh
aprs/: Cargo.toml  README.md
aprs-is/: Cargo.toml  README.md
aprs-is/src/: client.rs  error.rs  events.rs  filter.rs  lib.rs  line.rs  login.rs  q_construct.rs
aprs/src/: build.rs  digipeater.rs  error.rs  item.rs  lib.rs  message.rs  messenger.rs  mic_e.rs  packet.rs  position.rs  smart_beaconing.rs  station_list.rs  status.rs  telemetry.rs  units.rs  weather.rs
ax25-codec/: Cargo.toml  README.md
ax25-codec/src/: address.rs  control.rs  error.rs  frame.rs  lib.rs  pid.rs
dstar-gateway/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  REFERENCES.md
dstar-gateway-core/: Cargo.toml  README.md
dstar-gateway-core/fuzz/: Cargo.toml
dstar-gateway-core/fuzz/fuzz_targets/: dcs_decode_client_to_server.rs  dcs_decode_server_to_client.rs  dextra_decode_client_to_server.rs  dextra_decode_server_to_client.rs  dplus_decode_client_to_server.rs  dplus_decode_server_to_client.rs  dplus_parse_auth_response.rs  dprs_parse.rs  header_decode.rs  slow_data_descramble.rs
dstar-gateway-core/src/: header.rs  hosts.rs  lib.rs  voice.rs
dstar-gateway-core/src/codec/: mod.rs
dstar-gateway-core/src/dprs/: coordinates.rs  crc.rs  encoder.rs  error.rs  mod.rs  parser.rs
dstar-gateway-core/tests/: codec_dcs_golden.rs  codec_dcs_proptest.rs  codec_dextra_golden.rs  codec_dextra_proptest.rs  codec_dplus_golden.rs  codec_dplus_proptest.rs  slow_data_encoder_golden.rs  trybuild_compile_fail.rs
dstar-gateway-server/: Cargo.toml  README.md
dstar-gateway-server/examples/: 02_authorized_reflector.rs  03_listen_only_dongles.rs  04_observability.rs  ref_reflector.rs
dstar-gateway-server/src/: lib.rs
dstar-gateway-server/tests/: reflector_cross_protocol_forward.rs  reflector_dextra_fanout.rs  trybuild_compile_fail.rs
dstar-gateway/adr/: 0001-sans-io.md  0002-typestate.md  0003-symmetric-server.md  0004-lenient-validator.md
dstar-gateway/book/: book.toml
dstar-gateway/examples/: 01_connect_dplus.rs  02_connect_dcs.rs  03_connect_dextra.rs  04_send_voice_dplus.rs  05_receive_voice_with_diagnostics.rs  06_dprs_position_listener.rs  07_reconnect_with_backoff.rs  08_bridge_two_reflectors.rs  09_blocking_cli.rs  10_record_session_to_file.rs
dstar-gateway/src/: error.rs  header.rs  hosts.rs  lib.rs  types.rs  voice.rs
dstar-gateway/tests/: conformance.rs  dcs_integration.rs  dextra_integration.rs  dplus_auth.rs  dplus_integration.rs  fake_reflector.rs  hardware.rs  loopback_dcs.rs  loopback_dextra.rs  loopback_dplus.rs  loopback_dplus_rejecting.rs  trybuild_compile_fail.rs
kiss-tnc/: Cargo.toml  README.md
kiss-tnc/src/: command.rs  decoder.rs  error.rs  frame.rs  lib.rs
kiss-tnc/tests/: fuzz_smoke.rs  roundtrip.rs
lodestar-core/: Cargo.toml  README.md  build.rs  uniffi.toml
lodestar-core/scripts/: build-xcframework.sh
lodestar-core/src/: cat.rs  lib.rs  lodestar.udl  mcp.rs  mmdvm.rs  reflector.rs  session.rs
mbelib-rs/: Cargo.toml  LICENSE  README.md
mbelib-rs/LICENSES/: ISC.txt
mbelib-rs/examples/: decode_ambe_stream.rs  encode_ambe_stream.rs  validate_analysis_vs_op25.rs  validate_bvec_vs_op25.rs  validate_dp_vs_op25.rs  validate_quantize_vs_op25.rs
mbelib-rs/src/: adaptive.rs  decode.rs  ecc.rs  enhance.rs  error.rs  lib.rs  math.rs  params.rs  synthesize.rs  tables.rs  unpack.rs  unvoiced_fft.rs
mbelib-rs/tests/: bit_layer_roundtrip.rs  diagnostic_voice_pipeline.rs  encoder_roundtrip.rs  golden.rs  kenwood_tables_integrity.rs  roundtrip.rs
mmdvm/: Cargo.toml  LICENSE  README.md
mmdvm-core/: Cargo.toml  LICENSE  README.md
mmdvm-core/src/: capabilities.rs  command.rs  config.rs  error.rs  frame.rs  hw_type.rs  lib.rs  mode.rs  nak.rs  status.rs  version.rs
mmdvm-core/tests/: config_build.rs  frame_roundtrip.rs  status_parse.rs
mmdvm/src/: error.rs  lib.rs  transport.rs
mmdvm/tests/: loopback.rs  space_gating.rs
ref_tools/: CMakeLists.txt  ambe_decode_dump.cc  ambe_encode_dump.cc  run_validation.sh
sextant/: Cargo.toml  README.md  macos-bundle.sh
sextant/src/: app.rs  audio.rs  main.rs  session.rs
stargazer/: Cargo.toml  README.md
stargazer/src/: config.rs  main.rs
thd75/: Cargo.toml  README.md  build.rs
thd75-repl/: Cargo.toml  README.md
thd75-repl/src/: check.rs  commands.rs  confirm.rs  help_text.rs  lib.rs  lint.rs  main.rs  mock_scenarios.rs  output.rs  script.rs  transport.rs
thd75-repl/tests/: check_command.rs  script_integration.rs  static_rules.rs
thd75-tui/: Cargo.toml  README.md
thd75-tui/src/: app.rs  event.rs  main.rs  radio_task.rs
thd75/examples/: bluetooth.rs  bt_native.rs  channel_dump.rs  config_backup.rs  identify.rs  kiss_monitor.rs  monitor.rs  tune.rs  write_settings.rs
thd75/probes/: arfc_verification_probe.rs  auto_offset_mapper.rs  bl_dw_probe.rs  bt_probe.rs  cat_verification.rs  cat_write_verification.rs  channel_name_probe.rs  fix_and_recall.rs  fo_field_map.rs  gm_probe.rs  gps_capture.rs  hardware_validation.rs  hardware_write_tests.rs  memory_dump.rs  mmdvm_gateway_probe.rs  mr_probe.rs  programming_probe.rs  remaining_types_probe.rs  sf_hex_probe.rs  tune_radio.rs
thd75/src/: error.rs  lib.rs
thd75/src/aprs/: mod.rs  (+2 more)
thd75/tests/: auto_offset_mapper.rs  bl_dw_probe.rs  bluetooth_test.rs  bt_probe.rs  cat_verification.rs  cat_write_verification.rs  channel_name_probe.rs  channel_scan.rs  deep_probe.rs  fix_and_recall.rs  gap_probe.rs  hardware_live.rs  hardware_regression.rs  hardware_validation.rs  hardware_write_tests.rs  integration_workflows.rs  kiss_fuzz_smoke.rs  kiss_real_captures.rs  kiss_roundtrip.proptest-regressions  kiss_roundtrip.rs  memory_diff.rs  memory_dump.rs  mmdvm_core_roundtrip.rs  mnemonic_scan.rs  mr_probe.rs  programming_probe.rs  protocol_control.rs  protocol_core.rs  protocol_memory.rs  protocol_remaining.rs  protocol_roundtrip.rs  protocol_service.rs  protocol_tone.rs  protocol_vfo.rs  radio_audio.rs  radio_core.rs  radio_memory.rs  radio_new_wrappers.rs  radio_subsystems.rs  radio_system.rs  (+7 more)
(+408 files in other folders)
