[workspace]
members = [
    "thd75",
    "thd75-tui",
    "thd75-repl",
    "dstar-gateway",
    "dstar-gateway-core",
    "dstar-gateway-server",
    "aprs",
    "aprs-is",
    "ax25-codec",
    "kiss-tnc",
    "mbelib-rs",
    "mmdvm",
    "mmdvm-core",
    "sextant",
    "stargazer",
    "lodestar-core",
]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
let_underscore_drop = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
undocumented_unsafe_blocks = "deny"
missing_assert_message = "deny"
missing_const_for_fn = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
# Workspace-wide ban on `#[allow(...)]`. Use `#[expect(...)]` with a
# `reason = "..."` field instead — `#[expect]` is self-auditing because
# clippy reports "unfulfilled lint expectation" when the suppressed lint
# stops firing, forcing stale suppressions to be pruned on every refactor.
# `allow_attributes_without_reason` additionally requires every remaining
# `expect`/`allow` to carry a `reason = "..."` field so the justification
# is visible at the suppression site.
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
# Every crate in this workspace has at least one `pub(crate)` private module — that's
# the pattern `unreachable_pub = "deny"` wants — but `clippy::redundant_pub_crate` (in
# the `nursery` group we deny) considers the `pub(crate)` redundant on an already-private
# module. The conflict is universal, so allow it workspace-wide instead of forcing every
# crate to override.
redundant_pub_crate = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
