[package]
name = "lodestar-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Rust core for Lodestar — native macOS + iOS/iPadOS D-STAR gateway app for the Kenwood TH-D75."
license = "GPL-2.0-or-later OR GPL-3.0-or-later"
authors = ["swiftraccoon"]
repository = "https://github.com/swiftraccoon/kenwood"
readme = "README.md"
keywords = ["dstar", "ham-radio", "ios", "kenwood", "th-d75"]
categories = ["multimedia", "api-bindings"]
publish = false

[lib]
name = "lodestar_core"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
# UniFFI `tokio` feature enables `#[uniffi::export(async_runtime = "tokio")]`
# which we need for the reflector session's async FFI surface.
uniffi = { version = "0.31", features = ["cli", "tokio"] }
# Sans-io D-STAR types (Callsign, Module, ProtocolKind, hosts file parsing, etc.)
dstar-gateway-core = { path = "../dstar-gateway-core" }
# Async tokio shell for reflector sessions (UDP socket + session loop).
dstar-gateway = { path = "../dstar-gateway" }
# Sans-io MMDVM wire-frame codec (`[0xE0, len, cmd, payload...]`).
mmdvm-core = { path = "../mmdvm-core" }
# Runtime: reused across FFI calls that drive reflector I/O.
tokio = { version = "1", features = ["net", "time", "sync", "rt", "macros", "io-util"] }
# Error wrapping for the FFI-visible ReflectorError enum.
thiserror = "2"
# Tracing for diagnostics inside the async session tasks.
tracing = { version = "0.1", default-features = false }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.31", features = ["bindgen-tests"] }

# Lints: inherit workspace strictness but opt out of `unsafe_code`
# enforcement because UniFFI's generated scaffolding emits
# `#[unsafe(no_mangle)]` which is fundamental to the Rust-to-Swift FFI.
# This crate exists for that FFI, so unsafe is inherent to its purpose.
# The `thd75` crate uses a similar pattern for its IOBluetooth wrapper
# (module-level `#[allow(unsafe_code)]` on `transport/bluetooth.rs`).
[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
# `unused_qualifications = "deny"` is intentionally omitted — UniFFI's
# generated scaffolding emits fully qualified paths like
# `std::vec::Vec<u8>` that trip this lint. The lint still applies to
# our hand-written code via clippy's pedantic group, which catches the
# same issue with `redundant_path_prefix`.
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
let_underscore_drop = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
undocumented_unsafe_blocks = "deny"
missing_assert_message = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
# Ban `#[allow]` — every suppression must be `#[expect(..., reason = "...")]`.
# Mirrors the root `[workspace.lints.clippy]` ban; restated here because this crate's
# `[lints]` block replaces the workspace one entirely (cargo does not merge).
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
# UniFFI's generated scaffolding declares top-level FFI functions
# (`extern "C" fn ...`) that clippy flags as candidates for `const`.
# They can't be const — they're the `#[unsafe(no_mangle)]` FFI surface.
# Allowing here rather than per-file because the scaffolding is emitted
# directly into `lib.rs` by `include_scaffolding!` and cannot be scoped.
missing_const_for_fn = "allow"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
