[package]
name = "mbelib-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Pure Rust AMBE 3600x2450 voice codec decoder for D-STAR digital radio"
license = "GPL-2.0-or-later"
publish = false

[dependencies]
# Real-input FFT for JMBE-compatible unvoiced synthesis (Algorithms #117-126).
# Pure Rust, MIT/Apache-2.0 (compatible with our GPL outgoing license).
realfft = "3.4"
# SIMD primitives (f32x4 / i32x4) for the float→i16 conversion hot path.
# Pure Rust, MIT/Apache-2.0/Zlib.
wide = "0.7"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# In a library crate with private modules, pub(crate) satisfies unreachable_pub
# but clippy::redundant_pub_crate considers it redundant — allow to resolve conflict.
redundant_pub_crate = "allow"
