[package]
name = "sextant"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Desktop GUI client for D-STAR reflectors (DExtra / DPlus / DCS). Companion to the POLARIS test reflector."
license = "GPL-2.0-or-later OR GPL-3.0-or-later"
authors = ["swiftraccoon"]
repository = "https://github.com/swiftraccoon/kenwood"
readme = "README.md"
keywords = ["dstar", "ham-radio", "reflector", "gui"]
categories = ["multimedia", "network-programming"]
publish = false

[[bin]]
name = "sextant"
path = "src/main.rs"

[dependencies]
# Protocol.
dstar-gateway = { path = "../dstar-gateway" }
dstar-gateway-core = { path = "../dstar-gateway-core" }
# Voice codec — enable encoder feature for TX path. This pulls the
# GPL-3.0-or-later provisions in via mbelib-rs's encoder module, which
# is why this crate is dual-licensed GPL-2+/GPL-3+.
mbelib-rs = { path = "../mbelib-rs", features = ["encoder"] }

# Async runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }

# GUI.
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"

# Audio I/O.
cpal = "0.15"
ringbuf = "0.4"

# Tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", default-features = false, features = ["formatting", "macros"] }
dirs-next = "2"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
let_underscore_drop = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
# Binary crate with private modules: `pub(crate)` is what
# `unreachable_pub` wants, but the module being non-public trips
# `redundant_pub_crate`. Same pattern as `thd75-repl`.
redundant_pub_crate = "allow"
