[package]
name = "sextant"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Desktop GUI client for D-STAR reflectors (DExtra / DPlus / DCS). Companion to the POLARIS test reflector."
license = "GPL-2.0-or-later OR GPL-3.0-or-later"
authors = ["swiftraccoon"]
repository = "https://github.com/swiftraccoon/kenwood"
readme = "README.md"
keywords = ["dstar", "ham-radio", "reflector", "gui"]
categories = ["multimedia", "network-programming"]
publish = false

[[bin]]
name = "sextant"
path = "src/main.rs"

[dependencies]
# Protocol.
dstar-gateway = { path = "../dstar-gateway" }
dstar-gateway-core = { path = "../dstar-gateway-core" }
# Voice codec — enable encoder feature for TX path. This pulls the
# GPL-3.0-or-later provisions in via mbelib-rs's encoder module, which
# is why this crate is dual-licensed GPL-2+/GPL-3+.
mbelib-rs = { path = "../mbelib-rs", features = ["encoder"] }

# Async runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }

# GUI.
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"

# Audio I/O.
cpal = "0.15"
ringbuf = "0.4"

# Tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", default-features = false, features = ["formatting", "macros"] }
dirs-next = "2"

[lints]
workspace = true
