[package]
name = "stargazer"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "D-STAR network observatory — reflector monitoring and voice capture service"
license = "GPL-2.0-or-later"
publish = false

[dependencies]
dstar-gateway = { path = "../dstar-gateway" }
dstar-gateway-core = { path = "../dstar-gateway-core" }
mbelib-rs = { path = "../mbelib-rs" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "tls-rustls", "macros"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
mp3lame-encoder = { version = "0.2", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
scraper = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# Binary crate with private modules: unreachable_pub requires pub(crate) but
# clippy::redundant_pub_crate considers it redundant — allow to resolve conflict.
[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_crate_dependencies = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
let_underscore_drop = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
undocumented_unsafe_blocks = "deny"
missing_assert_message = "deny"
missing_const_for_fn = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
