[package]
name = "stargazer"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "D-STAR network observatory — reflector monitoring and voice capture service"
license = "GPL-2.0-or-later"
publish = false

[dependencies]
dstar-gateway = { path = "../dstar-gateway" }
dstar-gateway-core = { path = "../dstar-gateway-core" }
mbelib-rs = { path = "../mbelib-rs" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "tls-rustls", "macros"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
mp3lame-encoder = { version = "0.2", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
scraper = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[lints]
workspace = true
