[package]
name = "thd75-repl"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Accessible command-line REPL for the Kenwood TH-D75 transceiver"
license = "GPL-2.0-or-later"
authors = ["swiftraccoon"]
repository = "https://github.com/swiftraccoon/kenwood"
readme = "../README.md"
keywords = ["ham-radio", "kenwood", "accessibility", "amateur-radio"]
categories = ["command-line-utilities"]
publish = false

[lib]
name = "thd75_repl"
path = "src/lib.rs"

[[bin]]
name = "thd75-repl"
path = "src/main.rs"

[features]
# Compiles in extra CLI flags (currently `--mock-radio <scenario>`)
# used only by integration tests. Not enabled in release builds.
testing = []

[dependencies]
kenwood-thd75 = { path = "../thd75" }
dstar-gateway = { path = "../dstar-gateway" }
dstar-gateway-core = { path = "../dstar-gateway-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# `time` is already in the transitive tree via tracing-appender's
# daily rotation logic. We use it directly here only to format the
# current UTC date into the "log file path" startup message so
# users can copy-paste the real filename for bug reports. Matching
# tracing-appender's internal UTC-based rotation means the date we
# print will always equal the rotation suffix at that moment.
time = { version = "0.3", default-features = false, features = ["formatting", "macros"] }
rustyline = "18"
dirs-next = "2"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
# In a binary crate with private modules, pub(crate) satisfies unreachable_pub
# but clippy::redundant_pub_crate considers it redundant — allow to resolve conflict.
redundant_pub_crate = "allow"

[dev-dependencies]
proptest = "1"
